hphp/hack/test/typecheck/array/disallow_key_value_inputs_for_varray.php
<?hh

function test(): void {
  varray["tingley" => 0];
}
